# toy-kv

./: .gitignore  Cargo.toml  Dockerfile  README.md
benchmark/: random_write.rs  sequential_write.rs  util.rs
example/: client.rs  server.rs
src/: engine.rs  lib.rs
src/engine/: dio.rs  error.rs  kv.rs  mod.rs  store.rs  util.rs
src/transport/: codec.rs  mod.rs  server.rs  session.rs
tests/: engine_test.rs  store_integration_test.rs  util_test.rs
